email funct, side dots funct

--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,27 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^20.12.2",
+    "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
+    "gaxios": "^6.3.0",
+    "https": "^1.0.0",
+    "mailersend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "tcp": "^1.0.0",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "react-scripts  start",
     "build": "react-scripts build",
+    "build:staging": "react-scripts build",
+    "build:production": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
